force-app/main/default/objects/SVMXC__User_GPS_Log__c/SVMXC__User_GPS_Log__c.object-meta.xml
<CustomObject>
    <description>User GPS Log is used to store the technician&apos;s location at periodic intervals.
The details of the location of the technician is received from any mobile device in which the technician is logged in.</description>
    <label>User GPS Log</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User GPS Logs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>