force-app/main/default/objects/SVMXC__User_GPS_Log__c/fields/SVMXC__Longitude__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Longitude__c</fullName>
    <description>to store longitude of the technician&apos;s location</description>
    <inlineHelpText>to store longitude of the technician&apos;s location</inlineHelpText>
    <label>Longitude</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>