force-app/main/default/objects/SVMXC__User_GPS_Log__c/fields/SVMXC__Status__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Status__c</fullName>
    <description>If the location of the technician is successfully captured at the client then this field will have Success else a failure.</description>
    <inlineHelpText>If the location of the technician is successfully captured at the client then this field will have Success else a failure.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>